alterando fontes e adicionando draggable

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -35,32 +35,35 @@
   <body>
     <header>
       <!--Imagem logo-->
-      <a href="#inicio">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
+      <a href="#inicio" draggable="false">
+        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
       </a>
       <!--Menu de acesso a outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
-        <a href="artistas.html">
+        <a href="artistas.html" draggable="false">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir pra Artistas"
             tabindex="1"
             title="Nossos artistas"
+            draggable="false"
         /></a>
-        <a href="Quem somos.html">
+        <a href="Quem somos.html" draggable="false">
           <img
             src="Imagens/Empresa.png"
             alt="Botão de ir para a página sobre a Tá que Tá"
             tabindex="1"
             title="Quem somos"
+            draggable="false"
         /></a>
       </div>
       <div class="links_acesso">
-        <a href="index.html">
+        <a href="index.html" draggable="false">
           <img
             src="Imagens/homeIcon.png"
             alt="Botão de ir para a página Inicial"
             title="Página inicial"
+            draggable="false"
         /></a>
         <div id="botão_abrir_login">
           <img
@@ -69,6 +72,7 @@
             alt="Botão de ir pro Usúario"
             tabindex="1"
             title="Usuário"
+            draggable="false"
           />
         </div>
       </div>
@@ -135,7 +139,7 @@
         <!--Final da página-->
         <div id="final_pagina">
           Saiba mais em:
-          <a href="Documentos - Empresa/Etapas- Tá que tá.zip"
+          <a href="Documentos - Empresa/Etapas- Tá que tá.zip" draggable="false"
             >Documentação da empresa</a
           >
         </div>
@@ -150,11 +154,12 @@
           src="Imagens/fecharIcon.png"
           alt="Fechar Login"
           loading="lazy"
+          draggable="false"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
         /></label>
         <input
           type="text"
@@ -165,7 +170,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
         /></label>
         <input
           type="password"
@@ -227,6 +232,7 @@
           alt="òtimo"
           title="Ótimo"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_2"
@@ -235,6 +241,7 @@
           alt="Bom"
           title="Bom"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_3"
@@ -243,6 +250,7 @@
           alt="Mediano"
           title="Mediano"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_4"
@@ -251,6 +259,7 @@
           alt="Ruim"
           title="Ruim"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_5"
@@ -259,15 +268,17 @@
           alt="Péssimo"
           title="Péssimo"
           loading="lazy"
+          draggable="false"
         />
       </div>
     </div>
     <!--Botão de voltar ao topo-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
         alt="Voltar ao topo da página"
+        draggable="false"
       />
     </a>
     <!--Caixa de suporte-->
@@ -280,6 +291,7 @@
         alt="Fechar caixa de Suporte"
         style="right: 0%; position: absolute; width: 70px"
         loading="lazy"
+        draggable="false"
       />
       <div id="container_mensagens"></div>
       <div id="container_botoes_suporte">
@@ -299,6 +311,7 @@
           alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
           loading="lazy"
+          draggable="false"
         />
       </div>
     </div>
@@ -308,6 +321,7 @@
         id="img-botão-suporte"
         src="Imagens/suporteIcon.png"
         alt="Abrir Suporte"
+        draggable="false"
       />
     </div>
     <!--créditos e botão de alterar sua visibilidade-->
@@ -316,10 +330,11 @@
       src="Imagens/expandirCreditoIcon.png"
       alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
+      draggable="false"
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false"> Vitorezy </a>
     </footer>
   </body>
 </html>
