--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -35,16 +35,17 @@
   <body>
     <header>
       <!--Logo-->
-      <a href="Quem somos.html">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
+      <a href="Quem somos.html" draggable="false">
+        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
       </a>
       <!--Links de acesso para outras páginas-->
       <div class="links_acesso">
-        <a href="index.html">
+        <a href="index.html" draggable="false">
           <img
             src="Imagens/homeIcon.png"
             alt="Botão de ir para a Página Inicial"
             title="Página inicial"
+            draggable="false"
         /></a>
         <div id="botão_abrir_login" style="display: none">
           <img
@@ -53,6 +54,7 @@
             alt="Botão de ir pro Usúario"
             tabindex="1"
             title="Usuário"
+            draggable="false"
           />
         </div>
       </div>
@@ -70,6 +72,7 @@
             id="seta_menu_opcoes_usuario"
             src="Imagens/seta_direita.png"
             alt="Abrir Menu"
+            draggable="false"
           />
         </div>
         <section id="conteudo_opcoes_usuario" style="display: none">
@@ -211,11 +214,12 @@
           src="Imagens/fecharIcon.png"
           alt="Fechar Login"
           loading="lazy"
+          draggable="false"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
         /></label>
         <input
           type="text"
@@ -226,7 +230,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
         /></label>
         <input
           type="password"
@@ -288,6 +292,7 @@
           src="Imagens/nota5Icon.png"
           alt="Ótimo"
           title="Ótimo"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -296,6 +301,7 @@
           src="Imagens/nota4Icon.png"
           alt="Bom"
           title="Bom"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -304,6 +310,7 @@
           src="Imagens/nota3Icon.png"
           alt="Mediano"
           title="Mediano"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -312,6 +319,7 @@
           src="Imagens/nota2Icon.png"
           alt="Ruim"
           title="Ruim"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -320,6 +328,7 @@
           src="Imagens/nota1Icon.png"
           alt="Péssimo"
           title="Péssimo"
+          draggable="false"
         />
       </div>
     </div>
@@ -329,11 +338,13 @@
       href="#inicio"
       title="Voltar para o início"
       style="display: none"
+      draggable="false"
     >
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
         alt="ir para o topo da Página"
+        draggable="false"
       />
     </a>
     <!-- Suporte-->
@@ -346,6 +357,7 @@
         src="Imagens/fecharIcon.png"
         alt="Fechar Suporte"
         style="right: 0%; position: absolute; width: 70px"
+        draggable="false"
       />
       <div id="container_mensagens"></div>
       <div id="container_botoes_suporte">
@@ -365,6 +377,7 @@
           src="Imagens/lixeiraIcon.png"
           alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
+          draggable="false"
         />
       </div>
     </div>
@@ -374,6 +387,7 @@
         id="img-botão-suporte"
         src="Imagens/suporteIcon.png"
         alt="Abrir Suporte"
+        draggable="false"
       />
     </div>
     <!--Creditos-->
@@ -382,10 +396,11 @@
       src="Imagens/expandirCreditoIcon.png"
       alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
+      draggable="false"
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" style="height: 0%">
+      <a href="https://github.com/Vitorezy" target="_blank" style="height: 0%" draggable="false">
         Vitorezy
       </a>
     </footer>
