--- a/index.html
+++ b/index.html
@@ -35,32 +35,35 @@
   <body>
     <header>
       <!--Logo-->
-      <a href="Quem somos.html">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
+      <a href="Quem somos.html" draggable="false">
+        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
       </a>
       <!--Links de acesso para outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
-        <a href="artistas.html">
+        <a href="artistas.html" draggable="false">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir para artistas parceiros"
             tabindex="1"
             title="Nossos artistas"
+            draggable="false"
         /></a>
-        <a href="Quem somos.html">
+        <a href="Quem somos.html" draggable="false">
           <img
             src="Imagens/Empresa.png"
             alt="Botão de ir pra Página Sobre a Tá que Tá"
             tabindex="1"
             title="Quem somos"
+            draggable="false"
         /></a>
       </div>
       <div class="links_acesso">
-        <a href="index.html">
+        <a href="index.html" draggable="false">
           <img
             src="Imagens/homeIcon.png"
             alt="Botão de ir para página inicial"
             title="Página inicial"
+            draggable="false"
         /></a>
         <label id="label_submitpecas" for="submit_pecas">
           <img
@@ -68,6 +71,7 @@
             alt="Botão de ir para o carrinho"
             id="enviar_carrinho"
             title="carrinho de compras"
+            draggable="false"
           />
           <p id="numeroitenscarrinho">0</p>
         </label>
@@ -79,6 +83,7 @@
             alt="Botão de ir pro Usúario"
             tabindex="1"
             title="Usuário"
+            draggable="false"
           />
         </div>
       </div>
@@ -183,6 +188,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">M</p>
@@ -209,6 +215,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">P</p>
@@ -235,6 +242,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">G</p>
@@ -261,6 +269,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">G</p>
@@ -287,6 +296,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">M</p>
@@ -313,6 +323,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">GG</p>
@@ -339,6 +350,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">P</p>
@@ -370,6 +382,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">M</p>
@@ -396,6 +409,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">PP</p>
@@ -410,7 +424,7 @@
               name="preco_individual_peca"
               type="text"
               disabled
-              value="44$"
+              value="44R$"
             />
           </div>
         </div>
@@ -422,6 +436,7 @@
                 src="Imagens/carrinhoBrancoIcon.png"
                 alt="adicionar item ao carrinho"
                 loading="lazy"
+                draggable="false"
               />
             </label>
             <p title="Tamanho">G</p>
@@ -452,11 +467,12 @@
           src="Imagens/fecharIcon.png"
           alt="Fechar Login"
           loading="lazy"
+          draggable="false"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
         /></label>
         <input
           type="text"
@@ -467,7 +483,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
         /></label>
         <input
           type="password"
@@ -529,6 +545,7 @@
           alt="Ótimo"
           title="Ótimo"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_2"
@@ -537,6 +554,7 @@
           alt="Bom"
           title="Bom"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_3"
@@ -545,6 +563,7 @@
           alt="Mediano"
           title="Mediano"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_4"
@@ -553,6 +572,7 @@
           alt="Ruim"
           title="Ruim"
           loading="lazy"
+          draggable="false"
         />
         <img
           id="emojis_avaliacao_5"
@@ -561,15 +581,17 @@
           alt="Péssimo"
           title="Péssimo"
           loading="lazy"
+          draggable="false"
         />
       </div>
     </div>
     <!--Botão de voltar ao inicio da página-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
         alt="Voltar ao topo da página"
+        draggable="false"
       />
     </a>
     <!--Caixa de suporte-->
@@ -582,6 +604,7 @@
         src="Imagens/fecharIcon.png"
         alt="Fechar Suporte"
         style="right: 0%; position: absolute; width: 70px"
+        draggable="false"
       />
       <div id="container_mensagens"></div>
       <div id="container_botoes_suporte">
@@ -601,6 +624,7 @@
           src="Imagens/lixeiraIcon.png"
           alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
+          draggable="false"
         />
       </div>
     </div>
@@ -610,6 +634,7 @@
         id="img-botão-suporte"
         src="Imagens/suporteIcon.png"
         alt="Abrir Caixa de Suporte"
+        draggable="false"
       />
     </div>
     <!--Créditos-->
@@ -618,10 +643,11 @@
       src="Imagens/expandirCreditoIcon.png"
       alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
+      draggable="false"
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false"> Vitorezy </a>
     </footer>
   </body>
 </html>
