--- a/artistas.html
+++ b/artistas.html
@@ -34,32 +34,35 @@
   <body>
     <header>
       <!--Topo da página-->
-      <a href="Quem somos.html">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" />
+      <a href="Quem somos.html" draggable="false">
+        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
       </a>
       <!--links de acesso para outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
-        <a href="artistas.html">
+        <a href="artistas.html" draggable="false">
           <img
             src="Imagens/artistaIcon.png"
             alt="Botão de ir para os Artistas"
             tabindex="1"
             title="Nossos artistas"
+            draggable="false"
         /></a>
-        <a href="Quem somos.html">
+        <a href="Quem somos.html" draggable="false">
           <img
             src="Imagens/Empresa.png"
             alt="Botão de ir para a Página sobre a Tá que Tá"
             tabindex="1"
             title="Quem somos"
+            draggable="false"
         /></a>
       </div>
       <div class="links_acesso">
-        <a href="index.html">
+        <a href="index.html" draggable="false">
           <img
             src="Imagens/homeIcon.png"
             alt="Botão de ir para a Página Inicial"
             title="Página inicial"
+            draggable="false"
         /></a>
 
         <div id="botão_abrir_login">
@@ -69,6 +72,7 @@
             alt="Botão de ir pro Usúario"
             tabindex="1"
             title="Usuário"
+            draggable="false"
           />
         </div>
       </div>
@@ -81,6 +85,7 @@
           href="#artista1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
+          draggable="false"
         >
           <div class="escrita_exibição_imagem_nav">
             <h1>Artista 1</h1>
@@ -91,6 +96,7 @@
           href="#artista2"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao1.jpg)"
+          draggable="false"
         >
           <div class="escrita_exibição_imagem_nav">
             <h1>Artista 2</h1>
@@ -101,6 +107,7 @@
           href="#artista3"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao2.jpg)"
+          draggable="false"
         >
           <div class="escrita_exibição_imagem_nav">
             <h1>Artista 3</h1>
@@ -111,6 +118,7 @@
           href="#artista4"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao3.jpg)"
+          draggable="false"
         >
           <div class="escrita_exibição_imagem_nav">
             <h1>Artista 4</h1>
@@ -127,7 +135,8 @@
         <!--container com as caixas de cada artista-->
         <div id="artista1" style="background-image: url(Imagens/wallpaper.jpg)">
           <div class="autor-identificação">
-            <img src="Imagens/usuário_icon_nav.png" alt="Foto do autor" />
+            <img src="Imagens/usuário_icon_nav.png" alt="Foto do autor"
+            draggable="false" />
             <h2>Nome do Artista</h2>
           </div>
           <div class="imagem_do_artista"></div>
@@ -149,6 +158,7 @@
             <img
               src="Imagens/usuário_icon_nav.png"
               alt="Foto do autor"
+              draggable="false"
               loading="lazy"
             />
             <h2>Nome do Artista</h2>
@@ -171,6 +181,7 @@
             <img
               src="Imagens/usuário_icon_nav.png"
               alt="Foto do autor"
+              draggable="false"
               loading="lazy"
             />
             <h2>Nome do Artista</h2>
@@ -196,7 +207,9 @@
             <img
               src="Imagens/usuário_icon_nav.png"
               alt="Foto do autor"
+              draggable="false"
               loading="lazy"
+              draggable="false"
             />
             <h2>Nome do Artista</h2>
           </div>
@@ -221,11 +234,12 @@
           src="Imagens/fecharIcon.png"
           alt="Fechar Login"
           loading="lazy"
+          draggable="false"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
         /></label>
         <input
           type="text"
@@ -236,7 +250,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
         /></label>
         <input
           type="password"
@@ -298,6 +312,7 @@
           src="Imagens/nota5Icon.png"
           alt="Ótimo"
           title="Ótimo"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -306,6 +321,7 @@
           src="Imagens/nota4Icon.png"
           alt="Bom"
           title="Bom"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -314,6 +330,7 @@
           src="Imagens/nota3Icon.png"
           alt="Mediano"
           title="Mediano"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -322,6 +339,7 @@
           src="Imagens/nota2Icon.png"
           alt="Ruim"
           title="Ruim"
+          draggable="false"
         />
         <img
           loading="lazy"
@@ -330,15 +348,17 @@
           src="Imagens/nota1Icon.png"
           alt="Péssimo"
           title="Péssimo"
+          draggable="false"
         />
       </div>
     </div>
     <!--Voltar ao topo-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início">
+    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
         alt="Voltar ao Topo da página"
+        draggable="false"
       />
     </a>
     <!--Suporte-->
@@ -350,6 +370,7 @@
         src="Imagens/fecharIcon.png"
         alt="Fechar Suporte"
         style="right: 0%; position: absolute; width: 70px"
+        draggable="false"
       />
       <div id="container_mensagens"></div>
       <div id="container_botoes_suporte">
@@ -369,6 +390,7 @@
           src="Imagens/lixeiraIcon.png"
           alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
+          draggable="false"
         />
       </div>
     </div>
@@ -378,6 +400,7 @@
         id="img-botão-suporte"
         src="Imagens/suporteIcon.png"
         alt="Abrir Suporte"
+        draggable="false"
       />
     </div>
     <!--Creditos e botão de abrir/fechar creditos-->
@@ -386,10 +409,11 @@
       src="Imagens/expandirCreditoIcon.png"
       alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
+      draggable="false"
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">  Vitorezy </a>
     </footer>
   </body>
 </html>
