--- a/carrinho.html
+++ b/carrinho.html
@@ -125,6 +125,7 @@
                 title="Selecione seu Sexo"
               >
                 <option
+                  id="optionselecione"
                   value="Selecione"
                   disabled
                   selected
