--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -65,6 +65,7 @@
       <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
+      <div id="inicio" style="height: 11%"></div>
       <!--Menu lateral-->
       <section id="opções_usuário" style="width: 7%">
         <div id="opções_usuário_abrir_fechar" style="width: 100%">
@@ -226,6 +227,8 @@
           name="nome_login"
           id="nome_login"
           autocomplete="name"
+          maxlength="12"
+          minlength="3"
           required
           placeholder="Digite seu nome"
         />
@@ -274,7 +277,7 @@
           />
         </div>
         <ul id="requerimentos_login">
-          <li>O nome deve estar preenchido</li>
+          <li>O nome deve estar preenchido e pode ter de 3 a 12 caractéres</li>
           <li>
             A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
           </li>
