--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de Inverno</p>
+            <h1>Inverno</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -221,8 +220,7 @@
             <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de Inverno</p>
+            <h1>Inverno</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -248,8 +246,7 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de Verão</p>
+            <h1>Verão</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -275,8 +272,7 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de Verão</p>
+            <h1>Verão</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -302,8 +298,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de outono</p>
+            <h1>Outono</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -329,8 +324,7 @@
             <p title="Tamanho">GG</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de outono</p>
+            <h1>Outono</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -356,8 +350,7 @@
             <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de primavera</p>
+            <h1>Primavera</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -388,8 +381,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção de primavera</p>
+            <h1>Primavera</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -415,8 +407,7 @@
             <p title="Tamanho">PP</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção Afro</p>
+            <h1>Afro</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -442,8 +433,7 @@
             <p title="Tamanho">G</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Exibir coleções</h1>
-            <p>Coleção Afro</p>
+            <h1>Afro</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -479,6 +469,8 @@
           name="nome_login"
           id="nome_login"
           autocomplete="name"
+          maxlength="12"
+          minlength="3"
           required
           placeholder="Digite seu nome"
         />
@@ -527,7 +519,7 @@
           />
         </div>
         <ul id="requerimentos_login">
-          <li>O nome deve estar preenchido</li>
+          <li>O nome deve estar preenchido e pode ter de 3 a 12 caractéres</li>
           <li>
             A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
           </li>
