--- a/artistas.html
+++ b/artistas.html
@@ -246,6 +246,8 @@
           name="nome_login"
           id="nome_login"
           autocomplete="name"
+          maxlength="12"
+          minlength="3"
           required
           placeholder="Digite seu nome"
         />
@@ -294,7 +296,7 @@
           />
         </div>
         <ul id="requerimentos_login">
-          <li>O nome deve estar preenchido</li>
+          <li>O nome deve estar preenchido e pode ter de 3 a 12 caractéres</li>
           <li>
             A senha precisa de no minímo 8 caractéres e máximo de 15 caractéres
           </li>
