--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -94,7 +94,7 @@
               type="file"
               name="arquivo_foto_usuario"
               id="arquivo_foto_usuario"
-              style="visibility: hidden"
+              style="display: none;"
             />
           </section>
           <section id="nav_opcoes_usuario">
