--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
     <header>
       <!--Logo-->
       <a href="Quem somos.html" draggable="false">
-        <img src="Imagens/logo sem fundo.png" alt="Logo Tá que Tá" draggable="false" />
+        <img
+          src="Imagens/logo sem fundo.png"
+          alt="Logo Tá que Tá"
+          draggable="false"
+        />
       </a>
       <!--Links de acesso para outras páginas-->
       <div class="links_acesso" id="linksladoesquerdo">
@@ -131,32 +135,32 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="btnNavOutono" id="btnNavOutono" checked />
+        <input type="checkbox" name="btnNavmarvel" id="btnNavmarvel" checked />
         <label
-          for="btnNavOutono"
+          for="btnNavmarvel"
           tabindex="1"
           class="imagem_exibição_nav"
           style="background-image: url(Imagens/imagemcolecao3.jpg)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>Outono</h1>
+            <h1>Marvel</h1>
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
         <input
           type="checkbox"
-          name="btnNavPrimavera"
-          id="btnNavPrimavera"
+          name="btnLooney"
+          id="btnLooney"
           checked
         />
         <label
-          for="btnNavPrimavera"
+          for="btnLooney"
           tabindex="1"
           class="imagem_exibição_nav"
-          style="background-image: url(Imagens/imagemcolecao4.jpg)"
+          style="background-image: url(Imagens/looneycolec.jfif)"
         >
           <div class="escrita_exibição_imagem_nav">
-            <h1>Primavera</h1>
+            <h1>Looney</h1>
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
@@ -181,7 +185,10 @@
       <h2 id="mensagem_selecao">Peças</h2>
       <form method="get" action="carrinho.html" id="pecas_home_container">
         <input class="checkbox_pecas" type="checkbox" id="check1" value="50" />
-        <div class="peca_home colecao_inverno">
+        <div
+          class="peca_home colecao_marvel"
+          style="background-image: url(Imagens/capit1.jfif)"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check1">
               <img
@@ -194,7 +201,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Inverno</h1>
+            <h1>Marvel</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -207,7 +214,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check2" value="94" />
-        <div class="peca_home colecao_inverno">
+        <div class="peca_home colecao_inverno"
+        style="background-image: url(Imagens/florz1.jfif)">
           <div class="exibicao_hover_pecas">
             <label for="check2">
               <img
@@ -233,7 +241,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check3" value="120" />
-        <div class="peca_home colecao_verao">
+        <div class="peca_home colecao_verao"
+        style="background-image: url(Imagens/blusa1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check3">
               <img
@@ -259,7 +268,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check4" value="14" />
-        <div class="peca_home colecao_verao">
+        <div class="peca_home colecao_verao"
+        style="background-image: url(Imagens/creed1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check4">
               <img
@@ -285,7 +295,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check5" value="32" />
-        <div class="peca_home colecao_outono">
+        <div class="peca_home colecao_marvel"
+        style="background-image: url(Imagens/deadp1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check5">
               <img
@@ -298,7 +309,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Outono</h1>
+            <h1>Marvel</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -311,7 +322,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check6" value="30" />
-        <div class="peca_home colecao_outono">
+        <div class="peca_home colecao_marvel"
+        style="background-image: url(Imagens/gwenz1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check6">
               <img
@@ -324,7 +336,7 @@
             <p title="Tamanho">GG</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Outono</h1>
+            <h1>Marvel</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -337,7 +349,8 @@
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check7" value="25" />
-        <div class="peca_home colecao_primavera">
+        <div class="peca_home colecao_Looney"
+        style="background-image: url(Imagens/lolaz1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check7">
               <img
@@ -350,7 +363,7 @@
             <p title="Tamanho">P</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Primavera</h1>
+            <h1>Looney</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -366,9 +379,10 @@
           class="checkbox_pecas"
           type="checkbox"
           id="check8"
-          value="1200"
+          value="25"
         />
-        <div class="peca_home colecao_primavera">
+        <div class="peca_home colecao_Looney"
+        style="background-image: url(Imagens/perna1.jfif)">>
           <div class="exibicao_hover_pecas">
             <label for="check8">
               <img
@@ -381,7 +395,7 @@
             <p title="Tamanho">M</p>
           </div>
           <div class="escrita_exibição_imagem_pecas">
-            <h1>Primavera</h1>
+            <h1>Looney</h1>
           </div>
           <div class="preco_peca">
             <input
@@ -389,12 +403,13 @@
               name="preco_individual_peca"
               type="text"
               disabled
-              value="1200R$"
+              value="25R$"
             />
           </div>
         </div>
         <input class="checkbox_pecas" type="checkbox" id="check9" value="44" />
-        <div class="peca_home colecao_afro">
+        <div class="peca_home colecao_afro"
+        >
           <div class="exibicao_hover_pecas">
             <label for="check9">
               <img
@@ -448,6 +463,21 @@
         <input id="submit_pecas" type="submit" value="enviar" />
       </form>
     </main>
+    <div id="container_peca_aberta" style="display: none">
+      <img
+        id="botaofecharpecaaberta"
+        class="botaofechar"
+        src="Imagens/cancelIcon.png"
+        alt="fechar caixa"
+        draggable="false"
+      />
+      <div class="botaomudarimagem" id="botaovoltarimagem">
+        <img src="Imagens/seta_esquerda.png" alt="voltar uma imagem" draggable="false"/>
+      </div>
+      <div class="botaomudarimagem" id="botaoproximaimagem">
+        <img src="Imagens/seta_direita.png" alt="Próxima imagem" draggable="false"/>
+      </div>
+    </div>
     <!--Página de login-->
     <div id="caixa_login" style="display: none">
       <h1 style="display: inline">Login</h1>
@@ -462,7 +492,11 @@
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy" draggable="false"
+          ><img
+            src="Imagens/inputNameIcon.png"
+            alt="Nome"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="text"
@@ -475,7 +509,11 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy" draggable="false"
+          <img
+            src="Imagens/senhaIcon.png"
+            alt="Senha"
+            loading="lazy"
+            draggable="false"
         /></label>
         <input
           type="password"
@@ -578,7 +616,12 @@
       </div>
     </div>
     <!--Botão de voltar ao inicio da página-->
-    <a id="botão-voltar" href="#inicio" title="Voltar para o início" draggable="false">
+    <a
+      id="botão-voltar"
+      href="#inicio"
+      title="Voltar para o início"
+      draggable="false"
+    >
       <img
         id="img-botão-voltar"
         src="Imagens/setaCima.png"
@@ -639,7 +682,9 @@
     />
     <footer>
       Criado por:
-      <a href="https://github.com/Vitorezy" target="_blank" draggable="false"> Vitorezy </a>
+      <a href="https://github.com/Vitorezy" target="_blank" draggable="false">
+        Vitorezy
+      </a>
     </footer>
   </body>
 </html>
