--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       <img
         id="botaofecharpecaaberta"
         class="botaofechar"
-        src="Imagens/cancelIcon.png"
+        src="Imagens/cancelicon.png"
         alt="fechar caixa"
         draggable="false"
       />
